--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-blue-900 text-white h-screen flex flex-col justify-center items-center">
-    <h1 class="text-4xl font-bold mb-8">EEG Speech Emotion Recognition</h1>
+    <h1 class="text-4xl font-bold mb-8">EEG Emotion Recognition</h1>
     <form id="uploadForm" class="bg-white p-8 rounded-lg shadow-md mb-8">
         <input type="file" id="fileInput" accept=".xlsx" class="mb-4 p-2 border border-gray-300 rounded-lg">
         <button type="button" onclick="predictEmotion()" class="bg-blue-500 text-white px-4 py-2 rounded-lg shadow-md hover:bg-blue-600 focus:outline-none focus:ring focus:ring-blue-300">Predict Emotion</button>
